syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "Messages/IncomeShared.proto";

message UpdateIncomeBaseDataRequest {
    int32 IncomeId = 1;

    DomainServices.HouseholdService.IncomeBaseData BaseData = 3;
}
